Fix hover for query-link and some colors (#334)
* fix hover for query-link and some colors

* fix some typo

* design small fixes

* fix overflow for Article for does not display scrollbar

--- a/client/view/BrowserStats/BrowsersStat.css
+++ b/client/view/BrowserStats/BrowsersStat.css
@@ -41,14 +41,19 @@
 }
 
 .BrowsersStat__placeholder {
+  box-sizing: border-box;
   display: flex;
   flex-direction: column;
-  flex-grow: 1;
   gap: 16px;
   align-items: center;
   justify-content: center;
+  height: 100%;
   padding: 24px;
   color: var(--separator);
+}
+
+.BrowsersStat {
+  flex-grow: 1;
 }
 
 .BrowsersStat__placeholderText {
@@ -100,7 +105,13 @@
 .BrowsersStat__td--coverage {
   --coverage: 20%;
 
-  background-image: linear-gradient(to right, var(--accent-alternave) var(--c), transparent var(--c), transparent);
+  background-image:
+    linear-gradient(
+      to right,
+      var(--accent-alternave) var(--coverage),
+      transparent var(--coverage),
+      transparent
+    );
 }
 
 .BrowsersStat__table tbody {
